# sdl2_playground

./: CMakeLists.txt  README.md  compile_commands.json
src/: main.cpp
src/game/: game.cpp  game.h  game_constants.h  renderer.h  window.cpp  window.h
src/game/component/: entity_manager.cpp  entity_manager.h  input_component.h  input_system.cpp  input_system.h  player_movement_system.cpp  player_movement_system.h  render_system.cpp  render_system.h  rigid_body_component.h
src/input/: input.cpp  input.h
src/object/: game_object.cpp  game_object.h  player.cpp  player.h
src/physics/: point.cpp  point.h
src/renderer/: renderer.cpp
src/texture/: texture_manager.cpp  texture_manager.h
src/time/: time_constants.h  timer.cpp  timer.h
test/: tests.cpp
tst/input/: input_test.cpp
